   1 March 2016
Format %zu not supported in VS 2008. Made it %lu if __WIN32__ defined.

  30 December 2015
Deleted some stale comments.

  29 December 2015
First time build with Microsoft Visual Studio Express 2015 for Windows Desktop
Replaced format "%0*ld" by LONG0nD, which is defined as "%0*lld" for Win64.
Some global variables renamed + other actions to remove shadowing.

  31 August 2015
Updated case conversion with latest UnicodeData.txt (09-Feb-2015 20:08).
See http://www.unicode.org/Public/UNIDATA/UnicodeData.txt.

  21 July 2015 - 6.194
If defined with -DPYTHONINTERFACE and -DBRACMATEMBEDDED you can now make a
Python module called 'prythat'. From Python you call (in this order)
    prythat.init()
    prythat.HolyGrail(string containing Bracmat expression)
    prythat.final()
The HolyGrail can be called any number of times.
From Bracmat you can call back to Python with the functions 
    Ni$"String with Python statements"
and Ni!$"String with a Python expression"
Only the function Ni! returns a value back from Python.
The subdirectory src/Python contains the Cython source file to 
construct the Python module, together with Bracmat's C source.
That subdirectory also contains a file launch.py that tests and
demonstrates the prythat module.
 

  17 April 2015
XML: New predefined functions for nesting data and for converting data back
to XML format.
    MLencoding - detects encoding in XML or HTML file
    nestML     - nest the internal representation of XML data
    toML       - convert internal representation of XML data to a string
                 containing XML data
HTML is supported, although nestML may still make wrong guesses.

  17 October 2014
Return -1 if an argument cannot be evaluated.

  24 September
Made handling of unquoted attributes in html elements more forgiving. Added
form feed to list of white space characters in html/xml parsing.

  23 September
xml.c: Fixed bugs in handling close tags inside script (or style) cdata.