@@ -1,3 +1,6 @@
+   7 April 2016
+Made %zu %lu if _WIN32 defined (not __WIN32__).
+
    1 March 2016
 Format %zu not supported in VS 2008. Made it %lu if __WIN32__ defined.
 
